[package]
name = "pixel_demolition_client"
version = "0.1.0"
authors = ["Elelzedel"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pixel_demolition_common = { path = "../common" }
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
console_error_panic_hook = "0.1.7"
simple-error = "0.3.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
	"Document",
	"Element",
	"Location",
	"HtmlCanvasElement",
	"DomRect",
	"MouseEvent",
	"KeyboardEvent",
	"Window",
	"CanvasRenderingContext2d",
	"TextMetrics",
	"BinaryType",
	"MessageEvent",
	"ErrorEvent",
	"WebSocket",
	"Blob",
	"HtmlImageElement",
	"ImageData",
	"CssStyleDeclaration",
	"VisibilityState",
	'Headers',
	'Request',
	'RequestInit',
	'RequestMode',
	'Response',
	'AudioContext',
	'AudioBufferSourceNode',
	'AudioContext',
	'AudioBuffer',
	'BaseAudioContext',
	'AudioDestinationNode',
	'PannerNode'
]
